--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@ header h1 .seo {
   color: #d9dcd6;
 }
 
+/*This notates the navigation panel for clickable links*/
 header nav {
   padding-top: 15px;
   margin-right: 20px;
@@ -70,34 +71,20 @@ p {
   margin-left: 25px;
 }
 
+/*This notates the main article section of the page, main content*/
 .content {
   width: 75%;
   display: inline-block;
   margin-left: 20px;
 }
 
-.benefits {
-  margin-right: 20px;
-  padding: 20px;
-  clear: both;
-  float: right;
-  width: 20%;
-  height: 100%;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #2589bd;
-  margin-bottom: 32px;
-  color: #ffffff;
+.content img {
+  max-height: 200px;
 }
 
-.benefits h3 {
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-.benefits img {
-  display: block;
-  margin: 10px auto;
-  max-width: 150px;
+.content h2 {
+  margin-bottom: 20px;
+  font-size: 36px;
 }
 
 .sections {
@@ -109,13 +96,32 @@ p {
   color: #ffffff;
 }
 
-.content img {
-  max-height: 200px;
+/*This notates the benefits side information found on the right*/
+.benefits {
+  margin-right: 20px;
+  padding: 20px;
+  clear: both;
+  float: right;
+  width: 20%;
+  height: 100%;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  background-color: #2589bd;
+  color: #ffffff;
 }
 
-.content h2 {
-  margin-bottom: 20px;
-  font-size: 36px;
+.benefits p {
+  margin-bottom: 32px;
+}
+
+.benefits h3 {
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.benefits img {
+  display: block;
+  margin: 10px auto;
+  max-width: 150px;
 }
 
 footer {
